<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!--  Abilities  -->
    <string name="STRENGTH" translatable="false" tools:keep="@string/STRENGTH">
        STRENGTH
    </string>

    <!--  app name  -->
    <string name="app_name">Role game assistant</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="ipsum" translatable="false" tools:keep="@string/ipsum">
        ipsum
    </string>

    <string name="lorem" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </string>
    <!--  lorem ipsum : long  -->
    <string name="lorem_ipsum_long" translatable="false" tools:keep="@string/lorem_ipsum_long">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
        eleifend justo sit amet lacus fringilla consequat quis vel enim.
        Integer ut nunc augue. Integer consectetur euismod volutpat.
        Curabitur ut dolor eu risus lacinia varius. Integer vitae
        pulvinar eros. Maecenas lacus lectus, ornare et consequat nec,
        blandit eu augue. Aenean tempor ipsum non elit efficitur,
        vel accumsan ipsum cursus. Duis eleifend volutpat est, at
        lacinia arcu pharetra eu. Praesent metus enim, scelerisque
        commodo faucibus eget, posuere et leo.
        Phasellus sollicitudin mi non imperdiet maximus. Phasellus
        eget condimentum nunc. Duis et condimentum dolor, ut
        condimentum metus. Suspendisse id urna in erat sodales
        euismod. Fusce tempus volutpat nibh. Quisque aliquet
        cursus facilisis. Maecenas sapien libero, hendrerit
        sagittis vehicula quis, euismod blandit ligula. Sed ut
        velit convallis, aliquam eros sit amet, ullamcorper ante.
        Fusce at ipsum ligula. Vestibulum at elit tortor. Nullam
        tincidunt lectus quis tortor tempor, vitae mattis enim
        sodales.
    </string>
    <!-- lorem ipsum : short  -->
    <string name="lorem_ipsum_short" translatable="false">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
        eleifend justo sit amet lacus fringilla consequat quis vel enim.
        Integer ut nunc augue. Integer consectetur euismod volutpat.
        Curabitur ut dolor eu risus lacinia varius. Integer vitae
        pulvinar eros. Maecenas lacus lectus, ornare et consequat nec,
        blandit eu augue. Aenean tempor ipsum non elit efficitur,
        vel accumsan ipsum cursus.
    </string>
    <string name="edit_breed">Edit breed</string>
    <string name="new_skill">New skill</string>
    <string name="edit_ideals">Edit ideals</string>
    <string name="ideal_title">Ideal title :</string>
    <string name="let_s_type_a_title">Let\'s type a title.</string>
    <string name="ideal_good_points">Ideal good points :</string>
    <string name="how_much_good_points">How much good points ?</string>
    <string name="ideal_evil_points">Ideal evil points :</string>
    <string name="how_much_evil_points">How much evil points ?</string>
    <string name="edit_occupation">Edit occupation</string>
    <string name="title">Title :</string>
    <string name="income">Income :</string>
    <string name="let_s_type_an_income">Let\'s type an income.</string>
    <string name="contacts">Contacts :</string>
    <string name="let_s_type_the_contacts">Let\'s type the contacts.</string>
    <string name="special">Special</string>
    <string name="let_s_type_the_special">Let\'s type the special</string>
    <string name="character">Character :</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="age_hint">Age …</string>
    <string name="name_hint">Name …</string>
    <string name="gender">Gender :</string>
    <string name="gender_hint">Gender …</string>
    <string name="biography">Biography :</string>
    <string name="biography_hint">Let\'s type a biography …</string>
    <string name="height">Height :</string>
    <string name="height_hint" translatable="false">1</string>
    <string name="weight">Weight :</string>
    <string name="weight_hint" translatable="false">50</string>
    <string name="breed">Breed :</string>
    <string name="add_breed_description">Add breed.</string>
    <string name="bonds">Bonds :</string>
    <string name="title_hint">Title</string>
    <string name="remainingCharacterValue" translatable="false">400</string>
    <string name="add_bond">Add bond.</string>
    <string name="delete_bond">Delete bond</string>
    <string name="character_search">Character search</string>
    <string name="search">Search …</string>
    <string name="characteristics">Characteristics</string>
    <string name="ability">Ability :</string>
    <string name="roll">Roll :</string>
    <string name="bonus">Bonus :</string>
    <string name="total">Total :</string>
    <string name="use_points">Use points</string>
    <string name="use_points_manually">Use points manually.</string>
    <string name="roll_the_dices">Roll the dices.</string>
    <string name="_1d6" translatable="false">1D6</string>
    <string name="roll_hint" translatable="false" tools:keep="@string/roll_hint">0</string>
    <string name="bonus_hint" translatable="false" tools:keep="@string/bonus_hint">0</string>
    <string name="total_hint" translatable="false" tools:keep="@string/total_hint">0</string>
    <string name="derived_values_1">Derived values 1</string>
    <string name="base_hp_siz_con_2">BASE HP (SIZ + CON) /2 :</string>
    <string name="baseHealth_hint" translatable="false" tools:keep="@string/baseHealth_hint">0</string>
    <string name="breed_bonus">+ BREED BONUS :</string>
    <string name="_breedBonus_hint" translatable="false" tools:keep="@string/_breedBonus_hint">0</string>
    <string name="equal" translatable="false">=</string>
    <string name="total_hp">TOTAL HP :</string>
    <string name="zero" translatable="false">0</string>
    <string name="idea_int_5">IDEA (INT * 5) :</string>
    <string name="sanity_pow_5">SANITY (POW * 5) :</string>
    <string name="luck_pow_5">LUCK (POW * 5) :</string>
    <string name="know_edu_5">KNOW (EDU * 5) :</string>
    <string name="edit_derived_values_manually">Edit derived values manually.</string>
    <string name="derived_values_2">Derived values 2</string>
    <string name="energy_po">ENERGY = PO :</string>
    <string name="siz_str">SIZ + STR :</string>
    <string name="damage_bonus">= Damage bonus :</string>
    <string name="alignment">Alignment :</string>
    <string name="alignment_picture">Alignment picture</string>
    <string name="cthulhu_myth">Cthulhu myth :</string>
    <string name="hobbies">Hobbies</string>
    <string name="skills">Skills :</string>
    <string name="hobby">Hobby</string>
    <string name="one" translatable="false">1</string>
    <string name="slash" translatable="false">/</string>
    <string name="threeHundred" translatable="false">300</string>
    <string name="add_skill">Add skill.</string>
    <string name="skill_sampleskill">Skill : SampleSkill</string>
    <string name="slash99" translatable="false">/ 99</string>
    <string name="validate">Validate.</string>
    <string name="skill_1">Skill 1</string>
    <string name="fifteen" translatable="false">15</string>
    <string name="plus" translatable="false">+</string>
    <string name="five" translatable="false">5</string>
    <string name="_150" translatable="false">150</string>
    <string name="base">Base</string>
    <string name="add">Add</string>
    <string name="ideals">Ideals :</string>
    <string name="add_ideal">Add ideal.</string>
    <string name="ideal_alignment">ideal alignment</string>
    <string name="ideal">Ideal</string>
    <string name="_100" translatable="false">100</string>
    <string name="_50" translatable="false">50</string>
    <string name="go_back">Go back.</string>
    <string name="save">SAVE</string>
    <string name="save_description">Save.</string>
    <string name="occupation">Occupation</string>
    <string name="occupations">Occupations</string>
    <string name="add_occupation">Add occupation.</string>
    <string name="income_title">Income :</string>
    <string name="income_hint">income</string>
    <string name="contacts_title">Contacts :</string>
    <string name="contact_hint">contact</string>
    <string name="special_title">Special :</string>
    <string name="special_hint">Special</string>
    <string name="skills_title">Skills :</string>
    <string name="total_title">Total</string>
    <string name="picture">Picture :</string>
    <string name="character_s_picture_description">Character\'s picture</string>
    <string name="before_continuing">Before continuing …</string>
    <string name="necessary_characteristics">Characteristics are necessary for the following steps.</string>
    <string name="characteristics_trick_title">Little trick :</string>
    <string name="characteristics_trick_content">You can shake your phone to get rolled characteristics !</string>
    <string name="button_to_delete_ideal">Button to delete ideal</string>
    <string name="button_to_delete_occupation">button to delete occupation</string>
    <string name="save_button">save button</string>
    <string name="savebutton">saveButton</string>
    <string name="let_s_type_a_bond">Let\'s type a bond</string>
    <string name="description">Description :</string>
    <string name="what_does_this_breed_look_like">What does this breed look like ?</string>
    <string name="type_a_breed_description">Let\'s type a breed description</string>
    <string name="type_a_breed_name">Let\'s type a breed name</string>
    <string name="delete_character_confirm">Delete character ?</string>
    <string name="go_back_confirmation">Go back ?</string>
    <string name="no_continue">No continue.</string>
    <string name="no_cancel">No, cancel.</string>
    <string name="yes_delete">Yes, delete.</string>
    <string name="hint_edit_breed_bonus">What is the bonus ?</string>
    <string name="health_points_hint">20</string>
    <string name="health_points_attribute">HP</string>
    <string name="what_do_you_want_to_edit">What do you want to edit ?</string>
    <string name="complete_edition">Complete edition</string>
    <string name="sanity_points_hint">99</string>
    <string name="pts">PTs</string>
    <string name="hint_sanity">99</string>


</resources>
