<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activityEditOccupation_textView_title"
        style="@style/activityEditBreed_textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_occupation"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activityEditOccupation_recyclerView_displayedOccupations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activityEditOccupation_textView_title"
        android:maxHeight="150dp"/>

    <Button
        android:id="@+id/activityEditOccupation_button_addNewOccupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/activityEditOccupation_recyclerView_displayedOccupations" />

    <LinearLayout
        android:id="@+id/activityEditOccupation_layout_setOccupation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/activityEditOccupation_button_addNewOccupation">


        <TableLayout
            android:id="@+id/activityEditOccupation_layout_occupationInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/activityEditOccupation_textView_occupationTitle"
                    android:layout_width="0dp"
                    android:layout_column="0"
                    android:layout_weight="2"
                    android:text="@string/title" />

                <EditText
                    android:inputType="text"
                    android:id="@+id/activityEditOccupation_editText_occupationTitle"
                    android:layout_width="0dp"
                    android:layout_column="1"
                    android:layout_weight="4"
                    android:hint="@string/let_s_type_a_title" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/activityEditOccupation_textView_occupationIncome"
                    android:layout_width="0dp"
                    android:layout_column="0"
                    android:layout_weight="2"
                    android:text="@string/income" />

                <EditText
                    android:inputType="text"
                    android:id="@+id/activityEditOccupation_editText_occupationIncome"
                    android:layout_width="0dp"
                    android:layout_column="1"
                    android:layout_weight="4"
                    android:hint="@string/let_s_type_an_income" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/activityEditOccupation_textView_occupationContacts"
                    android:layout_width="0dp"
                    android:layout_column="0"
                    android:layout_weight="2"
                    android:text="@string/contacts" />

                <EditText
                    android:inputType="text"
                    android:id="@+id/activityEditOccupation_editText_occupationContacts"
                    android:layout_width="0dp"
                    android:layout_column="1"
                    android:layout_weight="4"
                    android:hint="@string/let_s_type_the_contacts" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/activityEditOccupation_textView_occupationSpecial"
                    android:layout_width="0dp"
                    android:layout_column="0"
                    android:layout_weight="2"
                    android:text="@string/special" />

                <EditText
                    android:inputType="text"
                    android:id="@+id/activityEditOccupation_editText_occupationSpecial"
                    android:layout_width="0dp"
                    android:layout_column="1"
                    android:layout_weight="4"
                    android:hint="@string/let_s_type_the_special" />
            </TableRow>

        </TableLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activityEditOccupation_recyclerView_occupationSkills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activityEditOccupation_layout_deleteAndSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/activityEditOccupation_imageButton_deleteOccupation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/my_button"
                android:padding="8dp"
                android:src="@drawable/ic_trash_can_24dp"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/button_to_delete_occupation" />

            <ImageButton
                android:contentDescription="@string/savebutton"
                android:id="@+id/activityEditOccupation_imageButton_saveOccupation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/my_button"
                android:padding="8dp"
                android:src="@drawable/ic_save_black_24dp"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/activityEditOccupation_layout_navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
