<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragmentBasicInfo_textView_title"
        style="@style/activityEditBreed_textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobby"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentBasicInfo_textView_title">

        <FrameLayout
            android:id="@+id/container_hobbySkills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="8dp"
            app:layout_constraintBottom_toTopOf="@id/container_hobbyPoints" />

        <LinearLayout
            android:id="@+id/container_hobbyPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_hobbySkills">

            <TextView

                android:id="@+id/tv_hobbyPoints_hundreds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <TextView
                android:id="@+id/tv_hobbyPoints_tens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/tv_hobbyPoints_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                style="@style/TextViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash" />

            <TextView
                android:id="@+id/tv_totalhobbyPoints"
                style="@style/TextViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/threeHundred" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_hobby_add_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:padding="8dp"
            android:src="@drawable/ic_add_black_24dp"
            app:layout_constraintBottom_toTopOf="@id/tv_selectedSkill"
            app:layout_constraintEnd_toEndOf="@id/tv_selectedSkill"
            app:layout_constraintTop_toBottomOf="@id/container_hobbyPoints"
            android:contentDescription="@string/add_skill" />

        <TextView

            android:id="@+id/tv_selectedSkill"
            style="@style/TextViewSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/skill_sampleskill"
            app:layout_constraintTop_toBottomOf="@id/btn_hobby_add_skill" />

        <LinearLayout
            android:id="@+id/container_skillPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_selectedSkill">

            <Spinner
                android:id="@+id/spinner_hobby_skill_tens"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/spinner_hobby_skill_units"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                style="@style/TextViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/slash99" />

            <ImageButton
                android:id="@+id/btn_validateSkillPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/mybutton"
                android:padding="8dp"
                android:src="@drawable/ic_check_black_24dp"
                android:contentDescription="@string/validate" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>