<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ParentLinearLayout">


    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container_occupationSkillsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextViewSubTitle"
                    android:id="@+id/tv_title_skillToCheckName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/name" />

                <TextView
                    style="@style/TextViewSubTitle"
                    android:id="@+id/tv_occupationSkillBase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/base" />

                <TextView
                    style="@style/TextViewSubTitle"
                    android:id="@+id/tv_occupationSkillAddTens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add" />

                <TextView
                    style="@style/TextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/slash" />

                <TextView
                    style="@style/TextViewSubTitle"
                    android:id="@+id/tv_occupationSkillTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_title" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_occupationSkills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/container_occupationSkillsHeader" />
            <ImageButton
                android:src="@drawable/ic_add_black_24dp"
                android:id="@+id/btn_occupation_addSkill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_occupationSkills"
                android:contentDescription="@string/add_skill" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>
