<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ParentLinearLayout">


    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.uldskull.rolegameassistant.fragments.fragment.characteristics.CharacteristicsRecyclerViewFragment">

            <LinearLayout
                android:id="@+id/layout_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_ability"
                    style="@style/TextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:minWidth="40dp"
                    android:text="@string/ability" />

                <TextView
                    android:id="@+id/tv_roll"
                    style="@style/TextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="40dp"
                    android:text="@string/roll" />

                <TextView
                    android:id="@+id/tv_bonus"
                    style="@style/TextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="40dp"
                    android:text="@string/bonus" />

                <TextView
                    android:id="@+id/tv_total"
                    style="@style/TextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="40dp"
                    android:text="@string/total" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_abilities"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/layout_titles" />

            <ImageButton
                android:src="@drawable/ic_pencil"
                android:id="@+id/btn_use_point"
                style="@style/myCornerRadiusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:padding="4dp"
                android:text="@string/use_points"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_abilities"
                android:contentDescription="@string/use_points_manually" />

            <ImageButton
                android:src="@drawable/ic_dice_twenty_faces_one"
                android:id="@+id/btn_roll"
                style="@style/myCornerRadiusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:padding="4dp"
                android:text="@string/roll"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_abilities"
                android:contentDescription="@string/roll_the_dices">

            </ImageButton>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>
