<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/layout_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        app:layout_constraintEnd_toStartOf="@id/btn_deleteBond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_bond"
            style="@style/TextViewSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_bondValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/lorem_ipsum_short"
            app:layout_constraintTop_toBottomOf="@id/tv_bond" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageButton
        android:id="@+id/btn_deleteBond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/mybutton"
        android:contentDescription="@string/delete_bond"
        android:gravity="center"
        android:padding="8dp"
        android:src="@drawable/ic_remove_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/layout_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_info" />

</androidx.constraintlayout.widget.ConstraintLayout>
